HAJ-1 Fixed checkbox, wizard, calendar theme, pagination, close button size,error icon layout, collaps icons, scroll on modal, button border with table

--- a/shj-admin-portal-web-fe/src/app/_shared/modules/hijri-gregorian-datepicker/datepicker/hijri-gregorian-datepicker.component.scss
+++ b/shj-admin-portal-web-fe/src/app/_shared/modules/hijri-gregorian-datepicker/datepicker/hijri-gregorian-datepicker.component.scss
@@ -1,3 +1,46 @@
+@import "variables";
 .is-invalid .form-control {
   border-color: #dc3545;
+}
+
+
+
+.ngb-dp-navigation-chevron {
+  [dir='rtl'] & {
+    transform: rotate(227deg)  !important;
+    margin-right: -2px;
+  }
+}
+
+.right .ngb-dp-navigation-chevron {
+  [dir='rtl'] & {
+    transform:rotate(46deg) !important;
+    margin-left: -2px;
+  }
+}
+
+[dir='rtl'] .dropdown-menu {
+  right: auto;
+  text-align: right;
+}
+
+.ngb-dp-navigation-chevron {
+  color: $dcc-primary !important;
+}
+
+.btn.ngb-dp-arrow-btn {
+  padding: 0;
+}
+
+[dir='rtl'] .ngb-dp-header .ngb-dp-navigation-select .custom-select {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.ngb-dp-header .ngb-dp-navigation-select .custom-select {
+  background-size: 12px;
+}
+
+[dir='rtl'] .ngb-dp-arrow {
+  max-width: 25px;
 }
